@@ -1,4 +1,8 @@
-﻿zg 15.05.2016 17:37:36 +0200 - build 4673
+﻿drkns 15.05.2016 22:00:35 +0200 - build 4674
+
+1. Уточнение 4668.
+
+zg 15.05.2016 17:37:36 +0200 - build 4673
 
 1. убрана блокировка перерисовки окон.
 
